# bug_power

./: CMakeLists.txt  package.xml  setup.py
config/: bug_power.yaml
esp32/BugPower/: .gitignore  platformio.ini
esp32/BugPower/lib/INA219/: Base.cpp  Base.h  INA219.cpp  INA219.h
esp32/BugPower/src/: main.cpp
launch/: test.launch
nodes/: bug_power_node.py  power_driver_node.py
scripts/bug_power/: driver.py
